--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SenseIt</string>
-    <string name="sensorlabel">Detect field</string>
+    <string name="sensorlabel">Plot of accelerometer readings</string>
     <string name="readinglabel">The current value of field is : </string>
 </resources>
